src/test/ui/existential_types/existential-types-with-no-traits.stderr
error: at least one trait must be specified
  --> $DIR/existential-types-with-no-traits.rs:3:23
   |
LL | existential type Foo: 'static;
   |                       ^^^^^^^

error: at least one trait must be specified
  --> $DIR/existential-types-with-no-traits.rs:10:13
   |
LL | fn bar() -> impl 'static {
   |             ^^^^^^^^^^^^

error: aborting due to 2 previous errors

